Apply Openrewrite Common Static Analysis Issue remediation Rule